tests/miniJava/neg/005013_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { public int [] java ( int [] java , int [] 0 java ) { return 0 ; } }
